<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:id="@+id/cardView">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp">

            <ImageView
                    android:id="@+id/appIcon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:padding="4dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"/>

            <ImageView
                    android:id="@+id/largeIcon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/appIcon"
                    android:contentDescription="@string/todo"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="4dp"/>

            <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/appIcon"
                    android:text="@string/app_name"
                    android:contentDescription="@string/todo"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"/>

            <TextView
                    android:id="@+id/dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/appName"
                    android:text="@string/dot"
                    android:contentDescription="@string/todo"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"/>

            <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/dot"
                    android:text="@string/notification_time_placeholder"
                    android:contentDescription="@string/todo"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"/>

            <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_toEndOf="@+id/largeIcon"
                    android:text="@string/notification_text_placeholder"
                    android:contentDescription="@string/todo"
                    android:textAppearance="@style/TextAppearance.Compat.Notification"
                    android:layout_marginTop="0dp"
                    />

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/largeIcon"
                    android:layout_toEndOf="@+id/largeIcon"
                    android:text="@string/notification_title_placeholder"
                    android:contentDescription="@string/todo"
                    android:textAppearance="@style/TextAppearance.Compat.Notification"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>